Se añadio a la direccion de los estilos y los links correspondientes a las redes sociales en aboutme.html

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Me</title>
-    <!-- Estilos personalizados para el sitio van aqui -->
+    <link rel="stylesheet" href="styles/aboutme.css">
 </head>
 <body>
 <header class='masthead'>
@@ -33,6 +33,11 @@
 </section>
 <footer class="content-footer">
     <p>Dejame un saludo en mis redes sociales:</p>
+    <ul class="social">
+        <li><a class="css-is-deranged" href="https://github.com/Daniel50726">GitHub</a></li>
+        <li><a class="css-is-deranged" href="https://www.linkedin.com/in/dfyepez50/">Linkedin</a></li>
+        <li><a class="css-is-deranged" href="https://www.instagram.com/danielyepez50/">Instagram</a></li>
+    </ul>
 </footer>
 </body>
 </html>
